cabal-version:      2.4
name:               bitcoin-taproot
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ian Shipman
maintainer:         ics@gambolingpangolin.com
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

    exposed-modules:
      Bitcoin.Taproot
      Bitcoin.Crypto.Schnorr

    other-modules:
      Bitcoin.Crypto.Schnorr.Internal

    build-depends:
        base >=4.14 && <4.17
      , binary >=0.8.8 && <0.11
      , bytestring >=0.10 && <0.12
      , cereal
      , cryptonite >=0.26 && <0.31
      , haskoin-core >=0.21 && <0.22
      , memory >=0.15 && <0.18
